gccida/g0/examine_flow_edges
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/examine_flow_edges/src/ssa-ccp.c:1106:6: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
v0 = edge_info_0; 
     ^~~~~~~~~~~
     edge_info
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/examine_flow_edges/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/examine_flow_edges/src/ssa-ccp.c:1140:6: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
v6 = edge_info_0; 
     ^~~~~~~~~~~
     edge_info
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/examine_flow_edges/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/examine_flow_edges/src/obj/ssa-ccp.o] Error 1
